[gd_scene load_steps=13 format=2]

[ext_resource path="res://Actors/Player/Player.gd" type="Script" id=1]
[ext_resource path="res://UI/Overlay/HealthBar.tscn" type="PackedScene" id=2]
[ext_resource path="res://Actors/Player/HitBox.gd" type="Script" id=3]
[ext_resource path="res://UI/Overlay/TopBar.tscn" type="PackedScene" id=4]
[ext_resource path="res://Actors/Enemies/Spawner.tscn" type="PackedScene" id=5]
[ext_resource path="res://Actors/Player/Attacks/Cannon.tscn" type="PackedScene" id=6]
[ext_resource path="res://Actors/Player/Galeon.obj" type="ArrayMesh" id=7]

[sub_resource type="CapsuleShape2D" id=3]
radius = 28.0
height = 36.0

[sub_resource type="CapsuleShape2D" id=5]
radius = 16.0
height = 32.0

[sub_resource type="CircleShape2D" id=4]
radius = 136.0

[sub_resource type="Animation" id=6]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Galeon:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ARVRCamera:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( -90, -180, 0 ) ]
}

[sub_resource type="Animation" id=7]
resource_name = "wobble"
length = 3.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Galeon:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 2.3 ),
"transitions": PoolRealArray( 0.5, -2, 2 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ), Vector3( 0, 0.12, 0 ), Vector3( 0, -0.2, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ARVRCamera:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 1, -2 ),
"update": 0,
"values": [ Vector3( -90, -180, 0 ), Vector3( -93, -180, 0 ) ]
}

[node name="Player" type="RigidBody2D"]
collision_layer = 32
collision_mask = 0
mass = 200.0
can_sleep = false
linear_damp = 2.2
angular_damp = 2.8
script = ExtResource( 1 )

[node name="Spawner" parent="." instance=ExtResource( 5 )]

[node name="HealthBar" parent="." instance=ExtResource( 2 )]

[node name="Polygon2D" type="Polygon2D" parent="."]
visible = false
color = Color( 0.403922, 0.188235, 0.0705882, 1 )
polygon = PoolVector2Array( 0, -40, 16, -16, 16, 24, 0, 32, -16, 24, -16, -16 )

[node name="Line2D" type="Line2D" parent="."]
visible = false
points = PoolVector2Array( -24, 0, 24, 0 )
default_color = Color( 1, 1, 1, 1 )
joint_mode = 1
begin_cap_mode = 2
end_cap_mode = 2

[node name="Label" type="Label" parent="."]
margin_left = -32.0
margin_top = 32.0
margin_right = 8.0
margin_bottom = 46.0

[node name="RemoteTransform2D" type="RemoteTransform2D" parent="."]
remote_path = NodePath("../Bumper")
update_position = false
update_scale = false

[node name="Camera2D" type="Camera2D" parent="."]
current = true
process_mode = 0
smoothing_enabled = true
smoothing_speed = 10.0

[node name="DampedSpringJoint2D" type="PinJoint2D" parent="."]
node_a = NodePath("..")
node_b = NodePath("../Bumper")
bias = 0.529
softness = 0.2

[node name="Cannon" parent="." instance=ExtResource( 6 )]

[node name="Bumper" type="RigidBody2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 4
mass = 30.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bumper"]
shape = SubResource( 3 )

[node name="LootEater" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 128

[node name="CollisionShape2D" type="CollisionShape2D" parent="LootEater"]
shape = SubResource( 5 )

[node name="LootSucker" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 128
space_override = 3
gravity_point = true
gravity_distance_scale = 0.006
gravity_vec = Vector2( 0, 0 )
gravity = 1900.0
linear_damp = 2.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="LootSucker"]
shape = SubResource( 4 )

[node name="HitBox" type="Area2D" parent="."]
collision_layer = 32
collision_mask = 24
monitorable = false
script = ExtResource( 3 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="HitBox"]
polygon = PoolVector2Array( -16, -16, -16, 24, 0, 32, 16, 24, 16, -16, 0, -40 )

[node name="TopBar" parent="." instance=ExtResource( 4 )]

[node name="RandomHealthUpdate" type="Timer" parent="."]
wait_time = 1.2
autostart = true

[node name="ViewportContainer" type="ViewportContainer" parent="."]
margin_left = -100.0
margin_top = -100.0
margin_right = 100.0
margin_bottom = 100.0
stretch = true

[node name="Viewport" type="Viewport" parent="ViewportContainer"]
size = Vector2( 200, 200 )
transparent_bg = true
handle_input_locally = false
render_target_update_mode = 3

[node name="Galeon" type="MeshInstance" parent="ViewportContainer/Viewport"]
mesh = ExtResource( 7 )
skeleton = NodePath("../../..")

[node name="ARVRCamera" type="ARVRCamera" parent="ViewportContainer/Viewport"]
transform = Transform( -1, 1.50996e-07, 6.60024e-15, 0, -4.37114e-08, 1, 1.50996e-07, 1, 4.37114e-08, 0, 11.3, 0 )
keep_aspect = 0
current = true
fov = 84.4

[node name="AnimationPlayer" type="AnimationPlayer" parent="ViewportContainer/Viewport"]
autoplay = "wobble"
playback_speed = 0.8
anims/RESET = SubResource( 6 )
anims/wobble = SubResource( 7 )

[connection signal="body_entered" from="LootEater" to="." method="_on_LootEater_body_entered"]
[connection signal="area_entered" from="HitBox" to="." method="_on_HitBox_area_entered"]
[connection signal="timeout" from="RandomHealthUpdate" to="." method="_on_RandomHealthUpdate_timeout"]
